--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,10 @@ services:
       - errlog:/tmp/errlog
     expose:
       - 8080
+    depends_on:
+      - postgres
 
-  db:
+  postgres:
     image: postgres
     container_name: postgres
     restart: always
